<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:orientation="vertical" >
    <include layout="@layout/action_bar_preview"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/old_pwd"
             android:textSize="28sp"
             android:textColor="@color/white"
             />
         <EditText
             android:id="@+id/old_pwd"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/new_pwd"
             android:textSize="28sp"
             android:textColor="@color/white"
             />
         <EditText
             android:id="@+id/new_pwd"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             />
          <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/confirm_pwd"
             android:textSize="28sp"
             android:textColor="@color/white"
             />
         <EditText
             android:id="@+id/confirm_pwd"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             />

         <Button
             android:id="@+id/confirm_change"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:background="@drawable/login_button_style"
             android:text="@string/confirm_change"
             android:textColor="@color/white"
             android:textSize="28sp" />

     </LinearLayout>
</LinearLayout>
