<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:orientation="vertical" 
   >
     <include layout="@layout/action_bar_preview"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center"
       android:orientation="vertical"
       >
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="28sp"
        android:textColor="@color/white"
        />
    <EditText
        android:id="@+id/login_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        />
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="28sp"
        android:textColor="@color/white"
        />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:password="true"
        />
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center"
        >
    <Button
        android:id="@+id/login"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_style"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="28sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_pwd"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <CheckBox
        android:checked="true"
        android:id="@+id/remember_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
    </LinearLayout>"

</LinearLayout>
