<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
          android:layout_width="400dp"
          android:layout_height="400dp"
          android:gravity="center">
           <RelativeLayout
            android:id="@+id/base_dialog_layout"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
           >
             <TextView
                android:id="@+id/base_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/dialog_adddivice"
                android:textColor="@color/blue"
                android:textSize="30sp" />
            </RelativeLayout> 
            
        <EditText
            android:id="@+id/Dialog_divice_name"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/base_dialog_layout"
            android:hint="@string/dialog_divicename"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
         <EditText
            android:layout_below="@+id/Dialog_divice_name"
            android:id="@+id/Dialog_divice_num"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:hint="@string/dialog_divicenum"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
          <TextView
              android:layout_below="@+id/Dialog_divice_num"
              android:id="@+id/Dialog_divice_type"
              android:layout_width="100dp"
              android:layout_height="70dp"
              android:gravity="center_vertical"
              android:text="@string/dialog_divicetype"
              android:textSize="15sp"   /> 
              <Spinner
                  android:layout_below="@+id/Dialog_divice_num"
                  android:layout_marginLeft="150dp"
                  android:id="@+id/Dialog_divice_typechoose"
                  android:layout_width="200dp"
                  android:layout_height="70dp"
                  android:entries="@array/diviceType"
                  />

         <View
            android:id="@+id/lan_view_line0"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/Dialog_divice_type"
            android:background="@color/DrakGrey" />

      <Button
            android:id="@+id/base_dialog_set_ok"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lan_view_line0"
            android:gravity="center"
            android:text="@string/dialog_ButtonOK"
            android:textColor="@color/blue"
            android:textSize="18sp" />

          <View
            android:id="@+id/login_view_line1"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/base_dialog_set_ok"
            android:layout_alignTop="@+id/base_dialog_set_ok"
            android:layout_toRightOf="@+id/base_dialog_set_ok"
            android:background="@color/DrakGrey" />

        <Button
            android:id="@+id/base_dialog_set_cancel"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lan_view_line0"
            android:gravity="center"
            android:text="@string/dialog_ButtonCancel"
            android:textColor="@color/blue"
            android:textSize="18sp" /> 
     </RelativeLayout>

</LinearLayout>
